controls/cis-eks/workloads/4.1/4.1.8/restrict-escalation-verbs-roles.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: restrict-escalation-verbs-roles
  annotations:
      policies.kyverno.io/title: Restrict Escalation Verbs in Roles
      policies.kyverno.io/category: RBAC Best Practices
      policies.kyverno.io/severity: medium
      policies.kyverno.io/subject: Role, ClusterRole, RBAC
      policies.kyverno.io/minversion: 1.6.0
      kyverno.io/kubernetes-version: "1.23"
      policies.kyverno.io/description: >-
          The verbs `impersonate`, `bind`, and `escalate` may all potentially lead to privilege escalation and should be tightly controlled. This policy prevents use of these verbs in Role or ClusterRole resources.
spec:
  validationActions:
      - Audit
  evaluation:
      background:
          enabled: true
  matchConstraints:
      resourceRules:
          - apiGroups: ["rbac.authorization.k8s.io"]
            apiVersions: ["*"]
            resources: ["roles", "clusterroles"]
            operations: ["CREATE", "UPDATE"]
  validations:
      - expression: "!object.rules.exists(rule, (rule.apiGroups == null || rule.apiGroups.exists(g, g == 'rbac.authorization.k8s.io')) && (rule.resources == null || rule.resources.exists(r, r == 'clusterroles' || r == 'roles')) && rule.verbs.exists(v, v == 'bind' || v == 'escalate' || v == 'impersonate'))"
        message: "Use of verbs `escalate`, `bind`, and `impersonate` are forbidden."
